Fix modal overflow scroll

--- a/contta/src/Components/Elements/Modal.module.css
+++ b/contta/src/Components/Elements/Modal.module.css
@@ -20,7 +20,6 @@
   border-radius: 5px;
   animation: animateModal .2s forwards;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, .5);
-  overflow: auto;
 }
 
 @keyframes animateModal {
